domain/src/main/java/ir/example/newstest/domain/error/CustomException.kt
package ir.example.newstest.domain.error

data class CustomException(override val message: String) : Exception()